--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -36,6 +36,8 @@
     ${self.robots()}
     
     ##these are globals, so they should be run first
+    ##things that need are referenced by the reddit, the buttons, and
+    ##the frame should go here
     <script type="text/javascript">
       var a = new Image();
       a.src = "${static('aupmod.png')}";
