--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -222,7 +222,8 @@ ${self.RenderPrintable()}
      link = _link()
      if fmt:
          link = fmt % {fmt_param: link}
-         link = link.replace("\n", " ").replace(" <", "&#32;<").replace("> ", ">&#32;")
+         ##who knows?
+         ##link = link.replace("\n", " ").replace(" <", "&#32;<").replace("> ", ">&#32;")
    %>   
 
   %if clicked:
