--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -95,6 +95,7 @@
 <%def name="javascript_run()">
   var class_dict = ${class_dict()};
   var where = ${path_info()};
+  var cur_site = "${c.site._fullname if not c.default_sr else ''}";
   window.onload = init;
   window.onpageshow = function(evt) {
     if (evt.persisted) init()
