--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -212,8 +212,8 @@ ${unsafe(txt)}
 </table>
 </%def>
 
-<%def name="separator()">
-  <span class="separator">|</span>
+<%def name="separator(separator_char)">
+  <span class="separator">${separator_char}</span>
 </%def>
 
 <%def name="optionalstyle(style)">
