--- a/r2/r2/templates/subredditbox.html
+++ b/r2/r2/templates/subredditbox.html
@@ -41,16 +41,7 @@
       %if col:
         <ul>
           %for sr, sel in col:
-            <li ${"class='selected'" if sel else ''} 
-                id="sr_sel_${sr._fullname}">
-              %if thing.checkboxes:
-                <input type="checkbox" ${"checked='checked'" if sel else ''}
-                       autocomplete="off"
-                       onclick="this.blur();"
-                       name="sr_sel_chx_${sr._fullname}" 
-                       onchange="return change_sr('${sr._fullname}');" 
-                       id="sr_sel_chx_${sr._fullname}"/>
-              %endif
+            <li ${"class='selected'" if sel else ''} >
               <%
                  if sr.path:
                      path = sr.path
