--- a/r2/r2/templates/subreddittopbar.html
+++ b/r2/r2/templates/subreddittopbar.html
@@ -20,34 +20,10 @@
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
 
-<%namespace file="utils.html" import="error_field"/>
-<% from r2.lib.template_helpers import static %>
-<div class="${thing._class} usertable">
-%if thing.editable:
-    <h1>${thing.form_title}</h1>
+<%namespace file="utils.html" import="plain_link"/>
 
-    <script src="${static('tabular.js')}"  type="text/javascript"></script>
-
-    <form action="/post/friend" method="post" class="pretty-form medium-text"
-          onsubmit="return post_form(this, 'friend');">
-      <input type="hidden" name="action" value="add"/>
-      <input type="hidden" name="container" value="${thing.container_name}"/>
-      <input type="hidden" name="type" value="${thing.type}"/>
-      <input type="text" name="name" id="name"/>
-      <button class="btn" type="submit">${_("add")}</button>
-      ${error_field("USER_DOESNT_EXIST", "span")}
-    </form>
-%endif
-
-  <h1>
-    ${thing.table_title}
-  </h1>
-
-  <table id="${thing.type}" >
-    <tr><td/></tr>
-    %for item in thing.users:
-      ${item.render()}
-    %endfor
-  </table>
+<div id="sr-header-area">
+  ${thing.sr_dropdown.render()}
+  ${thing.sr_bar.render()}
+  ${plain_link(unsafe(_("more") + " &raquo;"), "/reddits/", id="sr-more-link")}
 </div>
-
