--- a/r2/r2/templates/subscriptionbox.html
+++ b/r2/r2/templates/subscriptionbox.html
@@ -19,35 +19,18 @@
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
+<%namespace file="utils.html" import="plain_link"/>
+<%namespace file="subreddit.html" import="addremove_button, permission_icons"/>
 
-<%namespace file="utils.html" import="error_field"/>
-<% from r2.lib.template_helpers import static %>
-<div class="${thing._class} usertable">
-%if thing.editable:
-    <h1>${thing.form_title}</h1>
-
-    <script src="${static('tabular.js')}"  type="text/javascript"></script>
-
-    <form action="/post/friend" method="post" class="pretty-form medium-text"
-          onsubmit="return post_form(this, 'friend');">
-      <input type="hidden" name="action" value="add"/>
-      <input type="hidden" name="container" value="${thing.container_name}"/>
-      <input type="hidden" name="type" value="${thing.type}"/>
-      <input type="text" name="name" id="name"/>
-      <button class="btn" type="submit">${_("add")}</button>
-      ${error_field("USER_DOESNT_EXIST", "span")}
-    </form>
-%endif
-
-  <h1>
-    ${thing.table_title}
-  </h1>
-
-  <table id="${thing.type}" >
-    <tr><td/></tr>
-    %for item in thing.users:
-      ${item.render()}
-    %endfor
-  </table>
+<div class="subscription-box">
+  <h1>your front page reddits</h1>
+  <ul>
+  %for sr in thing.reddits:
+    <li>
+      ${addremove_button(sr)}
+      ${plain_link(sr.name, sr.path, _class="title")}
+      ${permission_icons(sr)}
+    </li>
+  %endfor
+  </ul>
 </div>
-
