--- a/r2/r2/public/static/reddit.css
+++ b/r2/r2/public/static/reddit.css
@@ -1647,7 +1647,7 @@ ul#image-preview-list .description pre {
 .dropdown.srdrop .selected { 
     background: transparent url(/static/droparrowwhite.gif) no-repeat scroll center right;
     display: inline-block;
-    vertical-align: text-bottom;
+    vertical-align: bottom;
     padding-right: 21px;
     padding-left: 5px; /* have to use padding instead of margin cause of ie */
     color: white;
