--- a/r2/r2/templates/searchform.html
+++ b/r2/r2/templates/searchform.html
@@ -29,8 +29,7 @@
          %if thing.prev_search:
            value="${thing.prev_search}" style="color:black"
          %else:
-           value="${_('search')}" style="color:gray" 
+           value="${_('search reddit')}" style="color:gray" 
          %endif
          name="q" onfocus="clearTitle(this)"/>
-  <input type="image" src="${static('/static/find.png')}" />
 </form>
