* now caching one organic list per user again * tracking for promoted links is now done via an authenticated hash to prevent replays * organic list now properly ignores spam (even for moderators) and deleted links * clicks and views on promoted links are now only tracked when they occur in the organic box or on the comments page * organic boxes for users with lots of Subreddit subscriptions no longer pollute the cache * properly validating URLs for promoted links (same rules as for regular submissions)

--- a/r2/r2/public/static/reddit.css
+++ b/r2/r2/public/static/reddit.css
@@ -590,15 +590,26 @@ before enabling */
     border: none;
 }
 
-.organic-help-button { padding: 0 .5ex; }
-
-.sponsored-tagline {
+.organic-listing .sponsored-tagline {
     color: #808080;
     bottom: 0;
     margin: 0 5px 5px 0;
     position: absolute;
-    right: 6.2em;
+    right: 6.3em;
+    display: block;
 }
+
+.sponsored-tagline {
+    display: none;
+}
+
+.promote-pixel {
+    position: absolute;
+    top: -1000px;
+    right: -1000px;
+}
+
+.organic-help-button { padding: 0 .5ex; }
 
 .infobar {
     background-color: #f6e69f;
