Fix miscellaneous bugs with promoted links, and reduce app-server load by reducing calls to apy.py:POST_onload

--- a/r2/r2/public/static/reddit.css
+++ b/r2/r2/public/static/reddit.css
@@ -583,6 +583,11 @@ before enabling */
     border: solid 1px;
     padding: 5px 0 5px 0;
     overflow: hidden;
+    position: relative;
+}
+
+.promoted-list {
+    font-size: larger;
 }
 
 .organic-listing .promoted {
