--- a/r2/r2/templates/linkpromoteinfobar.html
+++ b/r2/r2/templates/linkpromoteinfobar.html
@@ -24,7 +24,7 @@
    from datetime import datetime
 %>
 
-<%namespace file="printable.html" import="state_button, yes_no_button" />
+<%namespace file="printable.html" import="yes_no_button" />
 <%namespace file="utils.html" import="plain_link" />
 
 %if thing.a.promoted:
