--- a/r2/r2/templates/promotedlink.html
+++ b/r2/r2/templates/promotedlink.html
@@ -32,7 +32,7 @@
 <%def name="entry()">
   ${parent.entry()}
   <p class="sponsored-tagline">
-    ${_('sponsored link')} |
+    ${_('sponsored link')}
   </p>
   <img class="promote-pixel"
    id="promote_img_${thing._fullname}" 
