--- a/r2/r2/templates/promotedlinks.html
+++ b/r2/r2/templates/promotedlinks.html
@@ -32,7 +32,12 @@
   <ul class="promoted-list">
     %for t in thing.things:
       <li class="entry">
-        ${plain_link(t.title,'/promote/edit_promo/%s' % to36(t._id))}&nbsp;
+        ${plain_link(t.title,'/promote/edit_promo/%s' % to36(t._id))} &nbsp;
+        %if t.promote_until:
+            ${(_("(until %(until)s)")
+              % dict(until = t.promote_until.strftime(thing.datefmt)))}
+            &nbsp;
+        %endif
         <ul class="buttons" style="display: inline;">
           <li>
             ${yes_no_button("unpromote", t._fullname, _("unpromote"), \
