socialite is now hosted on https for simplified deployment

--- a/r2/r2/templates/socialite.html
+++ b/r2/r2/templates/socialite.html
@@ -13,7 +13,7 @@
 
 <div class="features">
   <p class="buttonclear">
-    <a class="installbutton" href="http://addons.reddit.com/socialite/socialite.xpi">
+    <a class="installbutton" href="https://addons.reddit.com/socialite/socialite.xpi">
       <span>Add to Firefox</span>
     </a>
   </p>
