--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -54,6 +54,7 @@
       <td class="error">
         ${error_field("NO_URL", "span")}
         ${error_field("BAD_URL", "span")}
+        ${error_field("ALREADY_SUB", "span")}
       </td>
     </tr>
     <tr>
