--- a/r2/r2/templates/panestack.xml
+++ b/r2/r2/templates/panestack.xml
@@ -21,5 +21,5 @@
 ################################################################################
 
 %for t in thing.stack:
-${t.render()}
+${t.render() if t else ''}
 %endfor
